invalid_label_sym_sym_arg_keywords_test/invalid_label_sym_sym_arg_keywords_test.src
.IPPcode24
JUMPIFEQ
JUMPIFEQ label1
JUMPIFEQ label1 TF@b
JUMPIFEQ label1 TF@c GF@b LF@b
JUMPIFEQ int TF@a GF@b
JUMPIFEQ label2 int GF@b
JUMPIFEQ label3 TF@a string@b
JUMPIFEQ label1 int@a bool
JUMPIFEQ label1 TF@a wrong_label
JUMPIFNEQ
JUMPIFNEQ label1
JUMPIFNEQ label1 TF@b
JUMPIFNEQ label1 TF@c GF@b LF@b
JUMPIFNEQ int TF@a GF@b
JUMPIFNEQ label2 int GF@b
JUMPIFNEQ label3 TF@a string@b
JUMPIFNEQ label1 int@a bool
JUMPIFNEQ label1 TF@a wrong_label